deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy: {}
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: localhost:32000/mockin-backend:registry
        imagePullPolicy: IfNotPresent
        name: backend
        ports:
          - containerPort: 4000
status: {}
