deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
spec:
  type: ClusterIP
  ports:
  - name: backend
    port: 4000
    targetPort: 4000
  selector:
    app: backend
status:
  loadBalancer: {}
