deploy/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mockin-ingress
spec:
  backend:
    serviceName: backend
    servicePort: 4000
